<resources>
    <string name="app_name">CrypScape</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CrypScape</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu">menu</string>

    <!-- Splash Screen -->
    <string name="cryp">cryp</string>
    <string name="scape">scape</string>

    <!-- Market Fragment -->
    <string name="market_title">Market</string>

    <!-- Market Fragment - Granularities-->
    <string name="_5m">5m</string>
    <string name="_15m">15m</string>
    <string name="_1h">1h</string>
    <string name="_6h">6h</string>
    <string name="_1m">1m</string>
    <string name="_1d">1d</string>
    <string name="order_book">Order Book</string>

    <!-- OrderBook -->
    <string name="market_size">Market Size</string>
    <string name="my_size">My Size</string>
    <string name="order_book_price">Price (%s)</string>
    <string name="order_book_spread_label">%s Spread</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="depth_chart">Depth Chart</string>
    <string name="mid_market_price">Mid Market Price</string>
</resources>
