<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_market">
    <activity
        android:id="@+id/nav_main"
        android:name="app.lemley.crypscape.ui.main.MainActivity"
        />

    <fragment
        android:id="@+id/nav_market"
        android:name="app.lemley.crypscape.ui.market.MarketFragment"
        android:label="@string/market_title"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/nav_order_book"
        android:name="app.lemley.crypscape.ui.order.OrderBookFragment"
        android:label="@string/order_book"
        tools:layout="@layout/fragment_order_book" />


    <fragment
        android:id="@+id/nav_settings"
        android:name="app.lemley.crypscape.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_order_book" />

</navigation>