<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/market"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/CrypScape.Section">

    <TextView
        android:id="@+id/currency_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.RealTime.CurrencyName"
        app:layout_constraintBottom_toTopOf="@id/granularity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="BTC -" />

    <TextView
        android:id="@+id/currency_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.RealTime.CurrencyValue"
        app:layout_constraintBottom_toBottomOf="@id/currency_name"
        app:layout_constraintStart_toEndOf="@+id/currency_name"
        app:layout_constraintTop_toTopOf="@id/currency_name"
        tools:text="$11,497.22" />

    <TextView
        android:id="@+id/currency_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.RealTime.ChangePercentageUp"
        app:layout_constraintBottom_toBottomOf="@id/currency_name"
        app:layout_constraintStart_toEndOf="@+id/currency_value"
        app:layout_constraintTop_toTopOf="@id/currency_name"
        tools:text="+1.27%" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/granularity"
        style="@style/CrypScape.Market.Granularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_name"
        app:tabGravity="center">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1m" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5m" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15m" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1h" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6h" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1d" />

    </com.google.android.material.tabs.TabLayout>

    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/granularity" />
</androidx.constraintlayout.widget.ConstraintLayout>
